zeit.retresco changes
=====================


1.10.6 (unreleased)
-------------------

- ZON-3994: Store ordered keywords in TMS


1.10.5 (2017-07-12)
-------------------

- PERF: Don't resolve anything in re-enrich hook,
  just create async jobs, so we can handle large content amounts


1.10.4 (2017-07-07)
-------------------

- MAINT: Add link to TMS to keyword widget


1.10.3 (2017-06-09)
-------------------

- FIX: Make DAV property access work in parallel indexing

- MAINT: Use variant URL for TMS teaser images


1.10.2 (2017-05-24)
-------------------

- ZON-3925: Remove metadata from topic page list which TMS now does
  not return anymore, but we didn't use anyway


1.10.1 (2017-05-10)
-------------------

- MAINT: Don't try to TMS-publish content that's missing required fields


1.10.0 (2017-05-10)
-------------------

- ZON-3896: Retrieve more metadata for topic page list

- Log complete TMS request on debug level


1.9.0 (2017-05-08)
------------------

- ZON-3173: Add endpoint for TMS reindexing


1.8.1 (2017-02-23)
------------------

- PERF: Don't update TMS during publishing.


1.8.0 (2016-12-05)
------------------

- ZON-3118: Add method to retrieve enriched article body with intext links.

- Patch requests library to rigorously enforce response timeouts.


1.7.4 (2016-11-04)
------------------

- Add option to load uniqueIds from file.


1.7.3 (2016-10-19)
------------------

- Optionally update content keywords from TMS result on bulk index,
  keeping intrafined pinned keywords.


1.7.2 (2016-10-06)
------------------

- Transmit existing intrafind keywords to TMS for indexing by mapping their
  entity_types properly.


1.7.1 (2016-09-30)
------------------

- Convert keywords to Tag objects for TMS and ES results.

- Implement an option to publish after index.


1.7.0 (2016-09-28)
------------------

- ZON-3362: Index properties of ``IVolume`` objects.

- Recognize ``--enrich`` CLI argument in the non-parallel case.
