@@ -224,6 +224,39 @@ class TMSTest(zeit.retresco.testing.FunctionalTestCase):
             self.assertEqual('mytopic', result[0]['id'])
             self.assertEqual('Mytopic', result[0]['title'])
 
+    def test_get_article_keywords_order_is_given_by_payload(self):
+        self.layer['request_handler'].response_body = json.dumps({
+            'entity_links': [
+                # Ignored: already linked
+                {'key': 'Merkel', 'key_type': 'person', 'score': "10.0",
+                 'status': 'linked', 'link': '/thema/merkel'},
+                # Picked up
+                {'key': 'Obama', 'key_type': 'person', 'score': "8.0",
+                 'status': 'not_linked', 'link': '/thema/obama'},
+                # Ignored, not in CMS list
+                {'key': 'Berlin', 'key_type': 'location', 'score': "5.0",
+                 'status': 'not_linked'},
+                # Ignored: no link
+                {'key': 'Washington', 'key_type': 'location', 'score': "3.0",
+                 'status': 'not_linked', 'link': '/thema/washington'},
+                # Picked up
+                {'key': 'New York', 'key_type': 'location', 'score': "5.0",
+                 'status': 'not_linked', 'link': '/thema/newyork'},
+            ],
+            'payload': {
+                'keywords': [
+                    {'label': 'New York', 'entity_type': 'location'},
+                    {'label': 'Obama', 'entity_type': 'person'},
+                    {'label': 'Merkel', 'entity_type': 'person'},
+                ],
+            },
+        })
+        tms = zope.component.getUtility(zeit.retresco.interfaces.ITMS)
+        result = tms.get_article_keywords('myid')
+        self.assertEqual(['New York', 'Obama'], [x.label for x in result])
+        self.assertEqual(
+            ['thema/newyork', 'thema/obama'], [x.link for x in result])
+
 
 class TopiclistUpdateTest(zeit.retresco.testing.FunctionalTestCase):
 
