@@ -101,8 +101,8 @@ class ConvertTest(zeit.retresco.testing.FunctionalTestCase,
                 'is_amp': False,
                 'is_breaking': None,
                 'is_instant_article': False,
-                'keywords': [{'key': 'Code1', 'key_type': 'keyword'},
-                             {'key': 'Code2', 'key_type': 'keyword'}],
+                'keywords': [{'label': 'Code1', 'entity_type': 'keyword'},
+                             {'label': 'Code2', 'entity_type': 'keyword'}],
                 'lead_candidate': True,
                 'page': None,
                 'print_ressort': None,
