@@ -5,6 +5,8 @@ zeit.retresco changes
 1.10.6 (unreleased)
 -------------------
 
+- ZON-3994: Implement `ITMS.get_article_keywords()`
+
 - ZON-3994: Store ordered keywords in TMS
 
 
